@@ -18,37 +18,10 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>repackage</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-resources-plugin</artifactId>
                         <version>3.1.0</version>
                         <executions>
-                            <execution>
-                                <id>copy-framework</id>
-                                <!-- here the phase you need -->
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/jib-extra-directory/framework</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>../algosim-framework</directory>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
                             <execution>
                                 <id>copy-resources</id>
                                 <!-- here the phase you need -->
@@ -66,6 +39,58 @@
                                 </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>heroku</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>copy-resources</id>
+                                <!-- here the phase you need -->
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/quotes</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>../quotes</directory>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.heroku.sdk</groupId>
+                        <artifactId>heroku-maven-plugin</artifactId>
+                        <version>3.0.2</version>
+                        <configuration>
+                            <appName>algosym-executor-server</appName>
+                            <processTypes>
+                                <web>java -Xverify:none -cp target/classes:target/dependency/* hse.algosim.server.executor.OpenAPI2SpringBoot --server.port=$PORT --framework.quotes.path=./target/quotes --repo.basePath=https://algosym-repo-server.herokuapp.com/api  --spring.datasource.hikari.minimum-idle=$CONN --spring.datasource.hikari.maximum-pool-size=$CONN</web>
+                            </processTypes>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
